--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "~4.12.2",
     "mongoose": "^4.0.3",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "simple-quadtree": "^0.1.2"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
