--- a/shout/.gitignore
+++ b/shout/.gitignore
@@ -1,4 +1,7 @@
 # Ignore everything in this directory
 *
-# Except this file
+# Don't ignore this file
 !.gitignore
+
+# Don't ignore directories so we can recurse into them
+!*/www/
