--- a/shout/package.json
+++ b/shout/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "angular-mocks": "^1.3.15",
     "bower": "^1.3.3",
+    "gulp-clean": "^0.3.1",
+    "gulp-jshint": "^1.11.0",
     "gulp-util": "^2.2.14",
     "jasmine-core": "^2.3.4",
     "karma": "^0.12.32",
@@ -21,6 +23,7 @@
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
+    "cordova-plugin-geolocation",
     "cordova-plugin-device",
     "cordova-plugin-console",
     "cordova-plugin-whitelist",
