--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "express": "~4.12.2",
     "mongoose": "^4.0.3",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
-    "simple-quadtree": "^0.1.2"
+    "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
     "gulp": "^3.8.11",
