--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-sass": "^2.0.1",
     "gulp-uglify": "^1.2.0",
     "mocha": "^2.2.5",
-    "superagent": "^1.2.0"
+    "should": "^6.0.3",
+    "supertest": "^1.0.1"
   }
 }
