--- a/shout/bower.json
+++ b/shout/bower.json
@@ -4,5 +4,8 @@
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0",
     "angular-mocks": "~1.3.15"
+  },
+  "dependencies": {
+    "underscore": "~1.8.3"
   }
 }
