--- a/shout/package.json
+++ b/shout/package.json
@@ -14,6 +14,7 @@
     "bower": "^1.3.3",
     "gulp-clean": "^0.3.1",
     "gulp-jshint": "^1.11.0",
+    "gulp-ng-constant": "^0.3.0",
     "gulp-util": "^2.2.14",
     "jasmine-core": "^2.3.4",
     "karma": "^0.12.32",
