--- a/shout/bower.json
+++ b/shout/bower.json
@@ -6,6 +6,15 @@
     "angular-mocks": "~1.3.15"
   },
   "dependencies": {
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "angular-cookies": "~1.4.0",
+    "angular-mocks": "~1.4.0",
+    "angular-route": "~1.4.0",
+    "angular-sanitize": "~1.4.0",
+    "angular-scenario": "~1.4.0",
+    "ng-file-upload": "1.4.0",
+    "jquery": "~2.1.4",
+    "json3": "~3.3.2",
+    "es5-shim": "~4.1.3"
   }
 }
