--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.1.32",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "2.9.25",
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
+    "lodash": "^3.9.3",
     "mongoose": "^4.0.3",
     "morgan": "~1.5.1",
     "q": "^1.4.1",
