--- a/shout/bower.json
+++ b/shout/bower.json
@@ -3,9 +3,15 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0",
-    "angular-mocks": "~1.3.15"
+    "angular-mocks": "~1.3.15",
+    "angular-scenario": "1.2.11"
   },
   "dependencies": {
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "json3": "~3.2.6",
+    "es5-shim": "~2.1.0",
+    "angular-cookies": "1.2.11",
+    "angular-sanitize": "1.2.11",
+    "ng-file-upload": "1.4.0"
   }
 }
