--- a/shout/.gitignore
+++ b/shout/.gitignore
@@ -1,11 +1,12 @@
-# Ignore everything in this directory
-
 # Don't ignore this file
 !.gitignore
 
 # Don't ignore directories so we can recurse into them
 !/www/*
 
+# Ignore
 www/lib/
 config.json
+config.xml
+.DS_Store
 
