--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@ server/lib/config/aws.json
 .DS_Store
 
 #ignore
-/shout/www/lib/
-/shout/www/platforms/
-/shout/www/config.json
+shout/www/lib/
+shout/www/platforms/
+shout/www/config.json
 .DS_Store
-/shout/platforms/
-/shout/plugins/
+shout/platforms/
+shout/plugins/
