--- a/shout/.gitignore
+++ b/shout/.gitignore
@@ -1,15 +1,9 @@
-# Don't ignore this file
-!.gitignore
-
-# Don't ignore directories so we can recurse into them
-!/www/*
-
-# Ignore
-www/lib/
-www/platforms/
 config.json
 config.xml
-.DS_Store
+
 platforms/
 plugins/
-resources/
+
+www/lib/
+www/platforms/
+www/dist/
