--- a/shout/bower.json
+++ b/shout/bower.json
@@ -9,6 +9,7 @@
     "underscore": "~1.8.3",
     "robotodraft": "~1.1.0",
     "ion-md-input": "~0.0.2",
-    "ionic-material": "~0.4.2"
+    "ionic-material": "~0.4.2",
+    "ngCordova": "~0.1.17-alpha"
   }
 }
