--- a/shout/ionic.project
+++ b/shout/ionic.project
@@ -1,4 +1,12 @@
 {
   "name": "shout",
-  "app_id": "65d16ce9"
+  "app_id": "65d16ce9",
+  "gulpStartupTasks": [
+    "sass",
+    "watch"
+  ],
+  "watchPatterns": [
+    "www/**/*",
+    "!www/lib/**/*"
+  ]
 }
