Ignores the splash and icon directories in resources

--- a/shout/.gitignore
+++ b/shout/.gitignore
@@ -8,3 +8,8 @@ plugins/
 www/lib/
 www/platforms/
 www/dist/
+
+resources/android/icon
+resources/android/splash
+resources/ios/icon
+resources/ios/splash
